[package]
name = "rinflux"
version = "0.1.0"
edition = "2021"
authors = ["Vasanth Kumar Kalaiselvan <itsparser@gmail.com>"]
description = "InfluxDB Driver for Rust"
keywords = ["influxdb", "database", "influx"]
license = "MIT"
readme = "README.md"
include = ["src/**/*", "tests/**/*", "Cargo.toml", "LICENSE"]
repository = "https://github.com/workfoxes/rinflux"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.3.0" }
http = "0.2.4"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"]}
tokio = { version = "1", features = ["full"] }
